--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,62 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
+:root {
+  --highlight-color: #007aff;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+body {
+  background-color: #f2f2f7;
+}
+
+/* Header Section */
+
+header {
+  background-color: #fff;
+  padding: 0.5rem;
+}
+
+header .label {
+  color: var(--highlight-color);
+  font-weight: 600;
+  font-size: 1rem;
+  width: max-content;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+  margin-left: auto;
+}
+
+header .heading {
+  font-size: 2rem;
+}
+
+/* Toggle Component */
+
+.toggler {
+  margin-top: 3rem;
+  margin-inline: auto;
+  background-color: rgba(166, 166, 166, 0.1);
+  padding: 4px;
+  width: max-content;
+  border-radius: 2rem;
+}
+
+.toggler .option {
+  display: inline-block;
+  padding: 0.4rem 0;
+  border-radius: 2rem;
+  width: 5rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.toggler .active {
+  background-color: white;
+  font-weight: 700;
+  color: var(--highlight-color);
 }
