--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 
 body {
   background-color: #f2f2f7;
+  height: 100vh;
 }
 
 /* Header Section */
@@ -27,7 +28,7 @@ header .label {
   font-weight: 600;
   font-size: 1rem;
   width: max-content;
-  padding-bottom: 1rem;
+  padding-bottom: 0.4rem;
   padding-left: 1rem;
   margin-left: auto;
 }
@@ -39,7 +40,7 @@ header .heading {
 /* Toggle Component */
 
 .toggler {
-  margin-top: 3rem;
+  margin-top: 2rem;
   margin-inline: auto;
   background-color: rgba(166, 166, 166, 0.1);
   padding: 4px;
@@ -59,4 +60,45 @@ header .heading {
   background-color: white;
   font-weight: 700;
   color: var(--highlight-color);
+}
+
+/* Form */
+form {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Input Boxes */
+
+.input-container {
+  display: flex;
+  background-color: white;
+  width: 90vw;
+  padding: 0.8rem;
+  margin-inline: auto;
+  margin-bottom: 1rem;
+  justify-content: space-between;
+  border-radius: 0.5rem;
+  position: relative;
+}
+
+.input-container .input-label {
+  width: 15%;
+}
+
+.input-container input {
+  border: none;
+  outline: none;
+  font-size: 16px;
+  margin: 0 1.7rem 0 2rem;
+  min-width: 0;
+  width: 60%;
+}
+
+.input-container .inputIcon {
+  position: absolute;
+  right: 1rem;
+  top: 0.9rem;
 }
