--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ form {
   display: flex;
   background-color: white;
   width: 90vw;
-  padding: 0.8rem;
+  padding: 0.7rem 0.8rem;
   margin-inline: auto;
   margin-bottom: 1rem;
   justify-content: space-between;
@@ -91,14 +91,15 @@ form {
 .input-container input {
   border: none;
   outline: none;
-  font-size: 16px;
+  font-size: 18px;
   margin: 0 1.7rem 0 2rem;
   min-width: 0;
   width: 60%;
+  caret-color: var(--highlight-color);
 }
 
 .input-container .inputIcon {
   position: absolute;
   right: 1rem;
-  top: 0.9rem;
+  top: 0.6rem;
 }
