--- a/src/App.css
+++ b/src/App.css
@@ -64,10 +64,7 @@ header .heading {
 
 /* Form */
 form {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translateX(-50%);
+  margin-top: 30%;
 }
 
 /* Input Boxes */
@@ -107,7 +104,7 @@ form {
 /* Remember toggler */
 
 .rememberText {
-  margin-left: 0.6rem;
+  margin-left: 2rem;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -143,13 +140,11 @@ form {
 /* Button */
 
 .submitBtn {
-  width: 90%;
   padding: 0.5rem;
   position: fixed;
-  bottom: 2rem;
-  display: block;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 1rem;
+  left: 1rem;
+  right: 1rem;
   background-color: white;
   border-radius: 0.5rem;
   border: none;
