--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@ body {
 header {
   background-color: #fff;
   padding: 0.5rem;
+  max-width: 600px;
+  margin-inline: auto;
 }
 
 header .label {
@@ -54,6 +56,7 @@ header .heading {
   border-radius: 2rem;
   width: 5rem;
   text-align: center;
+  cursor: pointer;
 }
 
 .toggler .active {
@@ -64,7 +67,10 @@ header .heading {
 
 /* Form */
 form {
-  margin-top: 30%;
+  margin-top: 35%;
+  max-width: 600px;
+  width: 90vw;
+  margin-inline: auto;
 }
 
 /* Input Boxes */
@@ -72,9 +78,8 @@ form {
 .input-container {
   display: flex;
   background-color: white;
-  width: 90vw;
+  width: 100%;
   padding: 0.7rem 0.8rem;
-  margin-inline: auto;
   margin-bottom: 1rem;
   justify-content: space-between;
   border-radius: 0.5rem;
@@ -98,13 +103,14 @@ form {
 .input-container .inputIcon {
   position: absolute;
   right: 1rem;
-  top: 0.6rem;
+  top: 0.85rem;
+  cursor: pointer;
 }
 
 /* Remember toggler */
 
 .rememberText {
-  margin-left: 2rem;
+  margin-left: 0.5rem;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -122,6 +128,7 @@ form {
   padding: 2px 0px;
   padding-left: 1.1rem;
   transition: padding 0.3s ease;
+  cursor: pointer;
 }
 
 .toggleContainer.off {
@@ -138,7 +145,6 @@ form {
 }
 
 /* Button */
-
 .submitBtn {
   padding: 0.5rem;
   position: fixed;
@@ -150,4 +156,17 @@ form {
   border: none;
   color: var(--highlight-color);
   font-size: 1.2rem;
+  max-width: 600px;
+  margin-inline: auto;
+  cursor: pointer;
+  box-shadow:
+    0 4px 10px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.06);
+}
+
+/* Media Query */
+@media (min-width: 768px) {
+  form {
+    margin-top: 12%;
+  }
 }
